<resources>
    <string name="app_name">PAD Ufes</string>
    <string name="app_name_full">Programa de Assistência Dermatológica</string>

    <string name="home_body_title">Escolha uma função</string>
    <string name="home_footer_change_settings">Alterar configurações da conexão</string>
    <string name="home_footer_server_ip_prefix">IP do servidor:</string>
    <string name="home_footer_server_port_prefix">Porta:</string>
    <string name="home_footer_server_connection_status_test">Testar conexão</string>
    <string name="home_footer_server_connection_status_ok">Conectado</string>
    <string name="home_footer_server_connection_status_failed">Não conectado</string>

    <string name="home_dialog_server_ip_hint">IP. Exemplo: 192.168.0.150</string>
    <string name="home_dialog_server_port_hint">Porta. Exemplo: 8080</string>

    <string name="dialog_delete_patient_confirmation">Deseja excluir o paciente com o número do SUS: %s</string>

    <string name="dialog_delete_image_confirmation">Deseja excluir essa imagem?</string>
    <string name="dialog_delete_lesion_confirmation">Deseja excluir essa lesão?</string>

    <string name="dermatology_home_patient_add_button">Novo paciente</string>
    <string name="dermatology_home_patient_list_button">Lista de pacientes</string>
    <string name="dermatology_home_patient_send_button">Enviar pacientes cadastrados</string>

    <string name="dermatology_new_patient_header">Novo Paciente</string>
    <string name="dermatology_new_patient_data_sus_number">Nº do cartão do SUS</string>
    <string name="dermatology_new_patient_data_age">Idade do paciente</string>
    <string name="dermatology_new_patient_data_service_city">Cidade de atendimento</string>
    <string name="dermatology_new_patient_data_living_city">Cidade em que o paciente mora</string>
    <string name="dermatology_new_patient_data_next">Próximo</string>

    <string name="dermatology_new_patient_lesion_body_region">Região da lesão</string>
    <string name="dermatology_new_patient_lesion_diagnosis">Diagnóstico</string>
    <string name="dermatology_new_patient_lesion_diagnosis_secondary">Diagnóstico secundário</string>
    <string name="dermatology_new_patient_lesion_related_title">Em relação à lesão:</string>
    <string name="dermatology_new_patient_lesion_grown">Cresceu?</string>
    <string name="dermatology_new_patient_lesion_itched">Coçou?</string>
    <string name="dermatology_new_patient_lesion_bleed">Sangrou?</string>
    <string name="dermatology_new_patient_lesion_hurt">Doeu?</string>
    <string name="dermatology_new_patient_lesion_pattern_changed">Mudou o padrão?</string>
    <string name="dermatology_new_patient_lesion_relief">Lesão em relevo?</string>
    <string name="dermatology_new_patient_lesion_next">@string/word_next</string>

    <string name="dermatology_new_patient_lesion_photos_camera">@string/word_camera</string>
    <string name="dermatology_new_patient_lesion_photos_album">@string/word_album</string>
    <string name="dermatology_new_patient_lesion_photos_confirm">Vincular lesão ao paciente</string>

    <string name="footer_change_function_button">Escolher outra função</string>

    <string name="dermatology_patients_list_header">Pacientes</string>
    <string name="dermatology_patients_item_sus_starting_text">SUS:</string>

    <string name="dermatology_patient_details_header">Paciente</string>
    <string name="dermatology_patient_details_lesion_title">Lesões</string>
    <string name="dermatology_patient_details_lesion_add">Adicionar nova lesão</string>
    <string name="dermatology_patient_details_update_patient_info">Atualizar informações básicas do paciente</string>
    <string name="dermatology_patient_details_update_lesion_info">Atualizar dados da lesão</string>
    <string name="dermatology_patient_details_attach_lesion">Vincular lesão ao paciente</string>
    <string name="dermatology_patient_details_remove_lesion">Excluir lesão</string>

    <string name="dermatology_patient_details_lesion_images">Imagens</string>


    <string name="surgery_home_body_button">Adicionar lesão</string>

    <string name="surgery_search_patient_header">Buscar Paciente</string>

    <string name="surgery_patient_details_name_prefix">Nome:</string>
    <string name="surgery_patient_details_medical_record_prefix">Protuário:</string>
    <string name="surgery_patient_details_allergy_prefix">Alergia:</string>
    <string name="surgery_patient_details_has_prefix">HAS:</string>
    <string name="surgery_patient_details_diabetes_prefix">Diabetes:</string>
    <string name="surgery_patient_details_anticoagulant_prefix">Anticoagulante:</string>
    <string name="surgery_patient_details_systolic_pressure_prefix">Pressão sistólica:</string>
    <string name="surgery_patient_details_diastolic_pressure_prefix">Pressão diastólica:</string>
    <string name="surgery_patient_details_lesions_number_prefix">Nº de lesões:</string>

    <string name="surgery_patient_details_header">Cirurgia - Detalhes da lesão</string>
    <string name="surgery_patient_details_region_hint">Região da lesão</string>
    <string name="surgery_patient_details_higher_diameter_hint">Diâmetro maior</string>
    <string name="surgery_patient_details_lower_diameter_hint">Diâmetro menor</string>
    <string name="surgery_patient_details_diagnosis_hint">Diagnóstico</string>
    <string name="surgery_patient_details_diagnosis_secondary_hint">Diagnóstico secundário</string>
    <string name="surgery_patient_details_procedure_hint">Procedimento</string>
    <string name="surgery_patient_details_obs_hint">Observações</string>
    <string name="surgery_patient_details_surgeon_hint">Cirurgião</string>

    <string name="surgery_patient_photos_header">Cirurgia - Imagens da lesão</string>
    <string name="surgery_patient_photos_confirm">Enviar dados da lesão</string>

    <string name="loading_default_text">Carregando...</string>

    <string name="word_cirurgia">Cirurgia</string>
    <string name="word_dermatologia">Dermatologia</string>
    <string name="word_sim">Sim</string>
    <string name="word_nao">Não</string>
    <string name="word_confirm">Confirmar</string>
    <string name="word_cancel">Cancelar</string>
    <string name="word_continue">Continuar</string>
    <string name="word_next">Próximo</string>
    <string name="word_camera">Câmera</string>
    <string name="word_album">Álbum</string>
</resources>