<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="24dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/surgery_patient_details_name_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Pedro Flores"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_medical_record_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_medical_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="algum prontuário"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_allergy_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_allergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="SIM"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_diabetes_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="NÃO"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_anticoagulant_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_anticoagulant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="NÃO"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_has_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_has"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="SIM"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_systolic_pressure_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_systolic_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="1.1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_diastolic_pressure_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_diastolic_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="1.1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/spacingMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surgery_patient_details_lesions_number_prefix"/>
        <TextView
            android:id="@+id/dialog_surgery_patient_details_lesions_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="3"/>
    </LinearLayout>
</LinearLayout>