<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".surgery.SurgeryHomeFragment">

    <LinearLayout
        android:id="@+id/fragment_surgery_home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_primary"
        android:padding="18dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/app_name_full"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_surgery_home_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_surgery_home_header"
        app:layout_constraintBottom_toTopOf="@id/fragment_surgery_home_footer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_surgery_home_cirurgia_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacingMargin"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/fragment_surgery_home_cirurgia_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cadastrar_paciente"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/surgery_home_body_button"
                android:textSize="24sp"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                android:gravity="center"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/fragment_surgery_home_cirurgia_image"
                app:layout_constraintStart_toStartOf="@id/fragment_surgery_home_cirurgia_image"
                app:layout_constraintEnd_toEndOf="@id/fragment_surgery_home_cirurgia_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/fragment_surgery_home_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_surgery_home_footer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacingMargin"
            android:text="@string/footer_change_function_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:letterSpacing="0"
            android:padding="16dp"
            app:icon="@drawable/outline_swap_horiz_24"
            app:iconTint="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>